--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ Released under the MIT license
   <head>
     <title>WebGL Water</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=yes" />
-    <script src="OES_texture_float_linear-polyfill.js"></script>
-    <script src="lightgl.js"></script>
-    <script src="cubemap.js"></script>
-    <script src="renderer.js"></script>
-    <script src="water.js"></script>
-    <script src="main.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <script src="scripts/render/OES_texture_float_linear-polyfill.js"></script>
+    <script src="scripts/render/lightgl.js"></script>
+    <script src="scripts/render/cubemap.js"></script>
+    <script src="scripts/render/renderer.js"></script>
+    <script src="scripts/render/water.js"></script>
+    <script src="scripts/main.js"></script>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <div id="loading">Loading...</div>
@@ -63,11 +63,11 @@ Released under the MIT license
         >
       </p>
     </div>
-    <img id="tiles" src="tiles.jpg" />
-    <img id="xneg" src="xneg.jpg" />
-    <img id="xpos" src="xpos.jpg" />
-    <img id="ypos" src="ypos.jpg" />
-    <img id="zneg" src="zneg.jpg" />
-    <img id="zpos" src="zpos.jpg" />
+    <img id="tiles" src="images/tiles.jpg" />
+    <img id="xneg" src="images/xneg.jpg" />
+    <img id="xpos" src="images/xpos.jpg" />
+    <img id="ypos" src="images/ypos.jpg" />
+    <img id="zneg" src="images/zneg.jpg" />
+    <img id="zpos" src="images/zpos.jpg" />
   </body>
 </html>
