--- a/index.html
+++ b/index.html
@@ -17,51 +17,65 @@ Released under the MIT license
     <script src="scripts/render/renderer.js"></script>
     <script src="scripts/render/water.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/interactions.js"></script>
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/controls.css" />
   </head>
   <body>
     <div id="loading">Loading...</div>
     <div id="help">
-      <h1>Chillwater</h1>
-      <h2>Interactions:</h2>
-      <ul>
-        <li>Draw on the water to make ripples</li>
-        <li>Drag the background to rotate the camera</li>
-        <li>Press SPACEBAR to pause and unpause</li>
-        <li>Drag the sphere to move it around</li>
-        <li>Press the L key to set the light direction</li>
-        <li>Press the G key to toggle gravity</li>
-      </ul>
-      <h2>Features:</h2>
-      <ul>
-        <li>Raytraced reflections and refractions</li>
-        <li>Analytic ambient occlusion</li>
-        <li>Heightfield water simulation *</li>
-        <li>Soft shadows</li>
-        <li>
-          Caustics (see
-          <a
-            href="https://medium.com/@evanwallace/rendering-realtime-caustics-in-webgl-2a99a29a0b2c"
-            >this</a
+      <div class="toggler" onclick="toggleHelp()">
+        <img
+          src="images/icons/arrow.svg"
+          class="icon retate"
+          id="arrow-icon"
+          width="20"
+          height="20"
+          alt=""
+        />
+        <h1>Chillwater</h1>
+      </div>
+      <div id="help-content">
+        <h2>Interactions:</h2>
+        <ul>
+          <li>Draw on the water to make ripples</li>
+          <li>Drag the background to rotate the camera</li>
+          <li>Press SPACEBAR to pause and unpause</li>
+          <li>Drag the sphere to move it around</li>
+          <li>Press the L key to set the light direction</li>
+          <li>Press the G key to toggle gravity</li>
+        </ul>
+        <h2>Features:</h2>
+        <ul>
+          <li>Raytraced reflections and refractions</li>
+          <li>Analytic ambient occlusion</li>
+          <li>Heightfield water simulation *</li>
+          <li>Soft shadows</li>
+          <li>
+            Caustics (see
+            <a
+              href="https://medium.com/@evanwallace/rendering-realtime-caustics-in-webgl-2a99a29a0b2c"
+              >this</a
+            >
+            for details) **
+          </li>
+        </ul>
+        <p>
+          <small
+            >* requires the OES_texture_float extension<br />** requires the
+            OES_standard_derivatives extension</small
           >
-          for details) **
-        </li>
-      </ul>
-      <p>
-        <small
-          >* requires the OES_texture_float extension<br />** requires the
-          OES_standard_derivatives extension</small
-        >
-      </p>
-      <p>
-        <small
-          >Tile texture from
-          <a href="http://www.flickr.com/photos/zooboing/3682834083/"
-            >zooboing</a
+        </p>
+        <p>
+          <small
+            >Tile texture from
+            <a href="http://www.flickr.com/photos/zooboing/3682834083/"
+              >zooboing</a
+            >
+            on Flickr</small
           >
-          on Flickr</small
-        >
-      </p>
+        </p>
+      </div>
     </div>
     <img id="tiles" src="images/tiles.jpg" />
     <img id="xneg" src="images/xneg.jpg" />
