Add tooltips to controls

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ Released under the MIT license
       </div>
     </div>
     <div class="controls">
-      <div onclick="toggleGravity()">
+      <div class="tooltip" onclick="toggleGravity()">
+        <span class="tooltiptext">Toggle Gravity</span>
         <img class="icon" src="images/icons/world.svg" />
       </div>
       <div class="hidden" id="play-icon" onclick="togglePlayPause()">
@@ -77,7 +78,8 @@ Released under the MIT license
       <div id="pause-icon" onclick="togglePlayPause()">
         <img class="icon" src="images/icons/pause.svg" />
       </div>
-      <div stylbe="background-color: aqua;" onclick="setLight()">
+      <div class="tooltip" onclick="setLight()">
+        <span class="tooltiptext">Change light direction</span>
         <img class="icon" src="images/icons/light.svg" />
       </div>
     </div>
